--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -28,10 +28,26 @@
 }
 
 .copyright__icon {
+  @include image-size;
   position: absolute;
   top: -50%;
   transform: translateY(50%);
-  right: 96px;
+  left: 197px;
   width: 27px;
   height: 34px;
+}
+
+@media (min-width: $tablet-width) {
+  .copyright {
+    align-self: center;
+  }
+
+  .copyright__link {
+    padding: 0;
+    padding-top: 7px;
+  }
+
+  .copyright__icon {
+    left: 100px;
+  }
 }
