--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -26,9 +26,21 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    height: 120px;
+  }
+
+  .footer__hashtag {
+    padding: 0;
+    margin: 0 auto;
   }
 
   .footer__list {
     padding-bottom: 0;
+  }
+
+  .footer__copyright {
+    padding-right: 50px;
+    margin: 0 auto;
   }
 }
