--- a/source/sass/blocks/video-presentation.scss
+++ b/source/sass/blocks/video-presentation.scss
@@ -2,6 +2,7 @@
 
 .video-presentation__wrapper {
   @include container;
+  position: relative;
 }
 
 .video-presentation__title,
@@ -21,4 +22,27 @@
 .video-presentation__video-file {
   @include image-size;
   vertical-align: bottom;
+}
+
+.video-presentation__box::before {
+  position: absolute;
+  content: "";
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 48px;
+  height: 54px;
+  background-image: url("../img/icon-play.svg");
+  background-repeat: no-repeat;
+}
+
+@media (min-width: $tablet-width) {
+  .video-presentation__video-file {
+    width: 648px;
+    height: 500px;
+  }
+
+  .video-presentation__box::before {
+    bottom: 223px;
+  }
 }
