Добавляет обертку с тенью для десктопной версии сайта

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,3 +1,5 @@
+@use "mixins.scss";
+
 .page__body {
   min-width: 320px;
   margin: 0;
@@ -10,5 +12,14 @@
   text-align: center;
   color: $dark-grey-color;
 
-  background-color: $white-color;
+  background-color: $grey-form-color;
+}
+
+@media (min-width: $desktop-width) {
+  .page__wrapper {
+    @include container;
+    max-width: 1200px;
+    background-color: $white-color;
+    box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  }
 }
