--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -162,12 +162,16 @@
   }
 }
 
-.form__comment .form__box {
+.form__comment {
   margin-bottom: 56px;
 }
 
 .form__comment .form__label {
   @include visually-hidden;
+}
+
+.form__comment .form__box {
+  margin: 0;
 }
 
 .form__submit-wrapper {
@@ -187,4 +191,166 @@
   font-size: 12px;
   text-align: right;
   color: $dark-grey-60-color;
+}
+
+@media (min-width: $tablet-width) {
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 43px;
+    padding: 0 60px 64px;
+  }
+
+  .form__contact-info {
+    position: relative;
+  }
+
+  .form__contact-info .form__title::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: -30px;
+    width: 1px;
+    height: 338px;
+    background-color: $grey-border-color;
+  }
+
+  .form__title {
+    width: auto;
+    padding: 0 47px;
+    border: none;
+  }
+
+  .form__personal-info .form__title,
+  .form__contact-info .form__title {
+    padding: 0 26px 28px;
+  }
+
+  .form__opinion .form__title,
+  .form__checklist .form__title {
+    padding-bottom: 0;
+    margin-bottom: 38px;
+  }
+
+  .form__comment .form__title {
+    margin-bottom: 28px;
+  }
+
+  .form__personal-info .form__box,
+  .form__contact-info .form__box {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .form__personal-info .form__text-field,
+  .form__contact-info .form__text-field {
+    width: 280px;
+  }
+
+  .form__opinion,
+  .form__checklist,
+  .form__comment {
+    grid-column-start: 1;
+    grid-column-end: -1;
+
+    border-top: 1px solid $grey-border-color;
+  }
+
+  .form__opinion {
+    margin-bottom: 40px;
+  }
+
+  .form__checklist {
+    margin-bottom: 40px;
+  }
+
+  .form__comment {
+    margin-bottom: 48px;
+  }
+
+  .form__opinion .form__list {
+    width: 575px;
+    display: grid;
+    grid-template-columns: 280px 280px;
+    gap: 16px;
+    margin: 0 auto;
+  }
+
+  .form__label-radio {
+    padding-bottom: 26px;
+  }
+
+  .form__checklist .form__list {
+    width: 480px;
+    display: grid;
+    grid-template-columns: 224px 224px;
+    column-gap: 32px;
+    row-gap: 16px;
+    margin: 0 auto;
+  }
+
+  .form__label-checkbox {
+    margin-left: 46px;
+    padding-bottom: 26px;
+  }
+
+  .form__submit-wrapper {
+    width: 648px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+
+    margin: 0 auto;
+  }
+
+  .form__button {
+    width: 324px;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form {
+    padding: 0 120px 64px;
+  }
+
+  .form__personal-info .form__box,
+  .form__contact-info .form__box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .form__personal-info .form__text-field,
+  .form__contact-info .form__text-field {
+    width: 430px;
+  }
+
+  .form__opinion .form__list {
+    width: 960px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .form__checklist .form__list {
+    width: 960px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .form__comment .form__box {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .form__submit-wrapper {
+    width: 768px;
+  }
 }
