--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -15,9 +15,13 @@
   background-color: $grey-form-color;
 }
 
+.page__wrapper {
+  @include container;
+  background-color: $white-color;
+}
+
 @media (min-width: $desktop-width) {
   .page__wrapper {
-    @include container;
     max-width: 1200px;
     background-color: $white-color;
     box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
