--- a/4/css/style.css
+++ b/4/css/style.css
@@ -20,9 +20,34 @@
   text-transform: uppercase;
   text-align: center;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
 }
 
+.page__wrapper {
+  box-sizing: border-box;
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ffffff;
+}
+@media (min-width: 768px) {
+  .page__wrapper {
+    width: 768px;
+  }
+}
+@media (min-width: 1200px) {
+  .page__wrapper {
+    width: 1200px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page__wrapper {
+    max-width: 1200px;
+    background-color: #ffffff;
+    box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  }
+}
 .title {
   font-size: 18px;
   line-height: 26px;
@@ -218,14 +243,30 @@
 }
 
 .copyright__icon {
+  max-width: 100%;
+  height: auto;
   position: absolute;
   top: -50%;
   transform: translateY(50%);
-  right: 96px;
+  left: 197px;
   width: 27px;
   height: 34px;
 }
 
+@media (min-width: 768px) {
+  .copyright {
+    align-self: center;
+  }
+
+  .copyright__link {
+    padding: 0;
+    padding-top: 7px;
+  }
+
+  .copyright__icon {
+    left: 100px;
+  }
+}
 .features__wrapper {
   box-sizing: border-box;
   width: 320px;
@@ -442,10 +483,22 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    height: 120px;
+  }
+
+  .footer__hashtag {
+    padding: 0;
+    margin: 0 auto;
   }
 
   .footer__list {
     padding-bottom: 0;
+  }
+
+  .footer__copyright {
+    padding-right: 50px;
+    margin: 0 auto;
   }
 }
 .form__block {
@@ -604,7 +657,7 @@
   background-image: url("../img/icon-tick-down.svg");
 }
 
-.form__comment .form__box {
+.form__comment {
   margin-bottom: 56px;
 }
 
@@ -620,6 +673,10 @@
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.form__comment .form__box {
+  margin: 0;
 }
 
 .form__submit-wrapper {
@@ -640,6 +697,164 @@
   color: rgba(51, 51, 51, 0.6);
 }
 
+@media (min-width: 768px) {
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 43px;
+    padding: 0 60px 64px;
+  }
+
+  .form__contact-info {
+    position: relative;
+  }
+
+  .form__contact-info .form__title::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: -30px;
+    width: 1px;
+    height: 338px;
+    background-color: #dbdbdb;
+  }
+
+  .form__title {
+    width: auto;
+    padding: 0 47px;
+    border: none;
+  }
+
+  .form__personal-info .form__title,
+.form__contact-info .form__title {
+    padding: 0 26px 28px;
+  }
+
+  .form__opinion .form__title,
+.form__checklist .form__title {
+    padding-bottom: 0;
+    margin-bottom: 38px;
+  }
+
+  .form__comment .form__title {
+    margin-bottom: 28px;
+  }
+
+  .form__personal-info .form__box,
+.form__contact-info .form__box {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .form__personal-info .form__text-field,
+.form__contact-info .form__text-field {
+    width: 280px;
+  }
+
+  .form__opinion,
+.form__checklist,
+.form__comment {
+    grid-column-start: 1;
+    grid-column-end: -1;
+    border-top: 1px solid #dbdbdb;
+  }
+
+  .form__opinion {
+    margin-bottom: 40px;
+  }
+
+  .form__checklist {
+    margin-bottom: 40px;
+  }
+
+  .form__comment {
+    margin-bottom: 48px;
+  }
+
+  .form__opinion .form__list {
+    width: 575px;
+    display: grid;
+    grid-template-columns: 280px 280px;
+    gap: 16px;
+    margin: 0 auto;
+  }
+
+  .form__label-radio {
+    padding-bottom: 26px;
+  }
+
+  .form__checklist .form__list {
+    width: 480px;
+    display: grid;
+    grid-template-columns: 224px 224px;
+    column-gap: 32px;
+    row-gap: 16px;
+    margin: 0 auto;
+  }
+
+  .form__label-checkbox {
+    margin-left: 46px;
+    padding-bottom: 26px;
+  }
+
+  .form__submit-wrapper {
+    width: 648px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    margin: 0 auto;
+  }
+
+  .form__button {
+    width: 324px;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .form {
+    padding: 0 120px 64px;
+  }
+
+  .form__personal-info .form__box,
+.form__contact-info .form__box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .form__personal-info .form__text-field,
+.form__contact-info .form__text-field {
+    width: 430px;
+  }
+
+  .form__opinion .form__list {
+    width: 960px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .form__checklist .form__list {
+    width: 960px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .form__comment .form__box {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .form__submit-wrapper {
+    width: 768px;
+  }
+}
 .main__page-title {
   box-sizing: border-box;
   width: 320px;
@@ -890,6 +1105,7 @@
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+  background-color: #ffffff;
 }
 @media (min-width: 768px) {
   .modal {
@@ -937,6 +1153,15 @@
   padding: 16px 60px;
 }
 
+@media (min-width: 768px) {
+  .modal--warning {
+    width: 400px;
+  }
+
+  .modal--information {
+    width: 640px;
+  }
+}
 .logo__image {
   width: 185px;
   height: 96px;
@@ -1004,6 +1229,10 @@
   border-bottom: 1px solid #e5e5e5;
 }
 
+.photo-gallery__link {
+  text-decoration: none;
+}
+
 .photo-gallery__item-image {
   max-width: 100%;
   height: auto;
@@ -1047,6 +1276,92 @@
   padding-left: 37px;
 }
 
+@media (min-width: 768px) {
+  .photo-gallery__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 60px;
+  }
+
+  .photo-gallery__item {
+    padding: 0;
+    border-top: none;
+  }
+  .photo-gallery__item:nth-child(2n-1) .photo-gallery__item-info {
+    background-color: #eaeaea;
+  }
+  .photo-gallery__item:first-child {
+    grid-column-start: 1;
+    grid-column-end: -1;
+  }
+  .photo-gallery__item:first-child .photo-gallery__item-image {
+    width: 648px;
+    height: 400px;
+  }
+  .photo-gallery__item:first-child .photo-gallery__item-info {
+    background-color: #f2f2f2;
+  }
+
+  .photo-gallery__item-image {
+    width: 324px;
+    height: 267px;
+  }
+
+  .photo-gallery__item-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 22px 20px 15px;
+    background-color: #f2f2f2;
+  }
+
+  .photo-gallery__caption {
+    padding: 0;
+  }
+
+  .photo-gallery__photo-name {
+    padding: 0;
+    margin-bottom: 8px;
+  }
+}
+@media (min-width: 1200px) {
+  .photo-gallery__wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0;
+  }
+
+  .photo-gallery__item {
+    position: relative;
+  }
+  .photo-gallery__item:first-child .photo-gallery__item-image {
+    width: 1200px;
+  }
+  .photo-gallery__item:first-child .photo-gallery__item-info {
+    width: 1200px;
+  }
+  .photo-gallery__item:nth-child(2n-1) .photo-gallery__item-info {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .photo-gallery__item-image {
+    width: 400px;
+  }
+
+  .photo-gallery__item-info {
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 400px;
+    height: 80px;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .photo-gallery__like-link {
+    color: #ffffff;
+  }
+}
 .promo {
   background-color: #5496bd;
   background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile.jpg");
@@ -1210,6 +1525,7 @@
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 @media (min-width: 768px) {
   .video-presentation__wrapper {
@@ -1240,5 +1556,28 @@
   max-width: 100%;
   height: auto;
   vertical-align: bottom;
+}
+
+.video-presentation__box::before {
+  position: absolute;
+  content: "";
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 48px;
+  height: 54px;
+  background-image: url("../img/icon-play.svg");
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 768px) {
+  .video-presentation__video-file {
+    width: 648px;
+    height: 500px;
+  }
+
+  .video-presentation__box::before {
+    bottom: 223px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
