--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -74,6 +74,14 @@
     background-image: url("../img/icon-menu.svg");
     background-repeat: no-repeat;
   }
+
+  & .main-nav__toggle:hover::before {
+    opacity: 0.6;
+  }
+
+  & .main-nav__toggle:active::before {
+    opacity: 0.3;
+  }
 }
 
 .main-nav--opened {
@@ -86,6 +94,14 @@
     height: 23px;
     background-image: url("../img/icon-cross.svg");
     background-repeat: no-repeat;
+  }
+
+  & .main-nav__toggle:hover::before {
+    opacity: 0.6;
+  }
+
+  & .main-nav__toggle:active::before {
+    opacity: 0.3;
   }
 }
 
@@ -158,6 +174,10 @@
     &:nth-child(2) {
       margin-right: 153px;
     }
+
+    &--active .main-nav__link {
+      color: $brown-carrent-color;
+    }
   }
 
   .main-nav__link {
@@ -165,6 +185,18 @@
     line-height: 21px;
     font-weight: 700;
     color: $black-color;
+
+    &[href]:hover {
+      color: $blue-default-color;
+    }
+
+    &:hover {
+      background-color: $white-color;
+    }
+
+    &[href]:active {
+      color: $black-30-color;
+    }
   }
 }
 
