--- a/5/css/style.css
+++ b/5/css/style.css
@@ -1579,13 +1579,18 @@
   padding: 0 27px 38px;
 }
 
-.video-presentation__video-file {
-  max-width: 100%;
-  height: auto;
-  vertical-align: bottom;
+.video-presentation__button {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
-
-.video-presentation__box::before {
+.video-presentation__button::before {
   position: absolute;
   content: "";
   bottom: 60px;
@@ -1597,13 +1602,33 @@
   background-repeat: no-repeat;
 }
 
+.video-presentation__play {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.video-presentation__video-file {
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
+}
+
 @media (min-width: 768px) {
   .video-presentation__video-file {
     width: 648px;
     height: 500px;
   }
 
-  .video-presentation__box::before {
+  .video-presentation__button::before {
     bottom: 223px;
   }
 }
