--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -16,7 +16,7 @@
   color: $black-color;
 
   margin: 0;
-  padding: 0 120px 20px 80px;
+  margin-right: 45px;
 
   &[href]:hover {
     color: $blue-default-color;
@@ -30,9 +30,8 @@
 .copyright__icon {
   @include image-size;
   position: absolute;
-  top: -50%;
-  transform: translateY(50%);
-  left: 197px;
+  top: -6px;
+  left: 122px;
   width: 27px;
   height: 34px;
 }
@@ -44,7 +43,6 @@
 
   .copyright__link {
     padding: 0;
-    padding-top: 7px;
   }
 
   .copyright__icon {
