--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,12 +2,12 @@
 
 .footer__wrapper {
   @include container;
+  padding: 28px 70px 23px;
 }
 
 .footer__hashtag {
   margin-top: 0;
-  margin-bottom: 0;
-  padding: 28px 50px 33px;
+  margin-bottom: 33px;
 
   font-size: 21px;
   line-height: 26px;
@@ -18,7 +18,11 @@
 .footer__list {
   @include list-decoration;
   margin: 0 auto;
-  padding-bottom: 37px;
+  margin-bottom: 43px;
+}
+
+.footer__copyright {
+  margin-bottom: 7px;
 }
 
 @media (min-width: $tablet-width) {
@@ -28,19 +32,27 @@
     justify-content: space-around;
     align-items: center;
     height: 120px;
+
+    padding: 36px 60px 36px 42px;
   }
 
   .footer__hashtag {
     padding: 0;
-    margin: 0 auto;
+    margin-bottom: 0;
   }
 
   .footer__list {
-    padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   .footer__copyright {
-    padding-right: 50px;
-    margin: 0 auto;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .footer__wrapper {
+    padding-right: 120px;
+    padding-left: 104px;
   }
 }
