--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,6 +18,7 @@ $grey-click-color: #b3b3b3;
 $grey-form-color: #f2f2f2;
 $grey-form-hover-color: #e5e5e5;
 $grey-form-down-color: #d5d5d5;
+$grey-line-color: #d6d6d6;
 $grey-border-color: #dbdbdb;
 $grey-gallery-color: #eaeaea;
 
