--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $light-grey-color: #eeeeee;
 $grey-click-color: #b3b3b3;
 $grey-form-color: #f2f2f2;
 $grey-form-hover-color: #e5e5e5;
+$grey-form-icon-color: #e6e6e6;
 $grey-form-down-color: #d5d5d5;
 $grey-line-color: #d6d6d6;
 $grey-border-color: #dbdbdb;
