--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -7,13 +7,43 @@
 .feedback__page-title,
 .feedback__description {
   margin-top: 0;
-  margin-bottom: 0;
+  padding: 0 20px;
 }
 
 .feedback__page-title {
-  padding: 36px 20px 24px;
+  margin-bottom: 24px;
 }
 
 .feedback__description {
-  padding: 0 20px 28px;
+  margin-bottom: 28px;
+}
+
+@media (min-width: $tablet-width) {
+  .feedback__page-title,
+  .feedback__description {
+    padding: 0 164px;
+  }
+
+  .feedback__page-title {
+    margin-bottom: 24px;
+  }
+
+  .feedback__description {
+    margin-bottom: 100px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .feedback__page-title,
+  .feedback__description {
+    padding: 0 380px;
+  }
+
+  .feedback__page-title {
+    margin-bottom: 32px;
+  }
+
+  .feedback__description {
+    margin-bottom: 56px;
+  }
 }
