--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -34,6 +34,7 @@
     background-size: auto;
     background-position: top center;
     background-repeat: no-repeat;
+    // clip-path: polygon(50% 4%, 100% 2%, 100% 100%, 0 100%, 0 2%);
   }
 }
 
