--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -5,7 +5,7 @@
 
   background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile.jpg");
   background-size: auto, cover;
-  background-position: bottom center, top center;
+  background-position: bottom calc(0% - 1px) center, top center;
   background-repeat: no-repeat, no-repeat;
 
   &--inner {
